--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,13 @@ dkms.conf
 #JetBrains
 .idea/
 
+#VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
